# Project_coursework

./: README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_df_reader_py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_reports_py.html  z_145eef247bfb46b6_services_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_views_py.html
src/: df_reader.py  main.py  reports.py  services.py  utils.py  views.py
src/reports/: report_spending_by_category_20251021_110938.json  report_spending_by_category_20251021_111127.json  report_spending_by_category_20251022_215258.json  report_spending_by_category_20251023_101840.json
src/src/reports/: report_spending_by_category_20251021_111556.json  report_spending_by_category_20251021_111636.json  report_spending_by_category_20251021_111842.json
tests/: conftest.py  test_df_reader.py  test_reports.py  test_services.py  test_utils.py  test_views.py
